# Malha

./: CMakeLists.txt  guia.md  main.cpp  mainwindow.cpp  mainwindow.h  malha.cpp  malha.h  malha.ui  tipos.h
Core/: CMakeLists.txt  geohl.h  geometria.cpp  geometria.h  massadados.h
IO/: CMakeLists.txt  IO_global.h  arquivo.h  io.cpp  io.h
View/: CMakeLists.txt  wcad.cpp  wcad.h
ensaio/: dados.h  wgeo.h
